--- a/app/src/main/res/layout/activity_myprofile.xml
+++ b/app/src/main/res/layout/activity_myprofile.xml
@@ -27,7 +27,8 @@
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="16dp">
 
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/ownerAvatarImage"
@@ -39,9 +40,7 @@
                         android:src="@drawable/ic_github"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.0" />
-
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
                         android:id="@+id/nameText"
@@ -58,7 +57,7 @@
                         android:id="@+id/IDText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="18dp"
+                        android:layout_marginStart="16dp"
                         android:text="hyun"
                         android:textSize="20dp"
                         app:layout_constraintStart_toEndOf="@+id/ownerAvatarImage"
@@ -68,12 +67,24 @@
                         android:id="@+id/emailText"
                         android:layout_width="200dp"
                         android:layout_height="19dp"
-                        android:layout_marginBottom="8dp"
                         android:layout_marginStart="16dp"
                         android:text="heidi@gmail.com"
-                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/ownerAvatarImage"
                         app:layout_constraintTop_toBottomOf="@+id/IDText" />
+
+                    <Button
+                        android:id="@+id/followButton"
+                        style="@style/Base.Widget.AppCompat.Button.Colored"
+                        android:layout_width="202dp"
+                        android:layout_height="37dp"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginEnd="30dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="10dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/ownerAvatarImage"
+                        app:layout_constraintTop_toBottomOf="@+id/emailText" />
 
                 </android.support.constraint.ConstraintLayout>
 
@@ -111,10 +122,10 @@
 
     <LinearLayout
         android:id="@+id/contents"
-        android:orientation="vertical"
-        android:layout_marginTop="60dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
+        android:orientation="vertical">
 
     </LinearLayout>
 
