--- a/app/src/main/res/layout/activity_repository.xml
+++ b/app/src/main/res/layout/activity_repository.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/repoMenu"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -14,9 +15,18 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <include
+        layout="@layout/head_repo"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <include
         layout="@layout/activity_profile_tab"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="34dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -76,6 +86,7 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="parent" />
 
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/contributor_button"
         android:layout_width="wrap_content"
@@ -112,5 +123,8 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_begin="310dp" />
+
+
+
 
 </android.support.constraint.ConstraintLayout>
