--- a/app/src/main/res/layout/repo_tab_code.xml
+++ b/app/src/main/res/layout/repo_tab_code.xml
@@ -9,6 +9,7 @@
         android:id="@+id/repoContentsView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="25dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
