--- a/app/src/main/res/layout/activity_myprofile.xml
+++ b/app/src/main/res/layout/activity_myprofile.xml
@@ -81,6 +81,7 @@
                         android:layout_marginEnd="30dp"
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="10dp"
+                        android:text="follow"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/ownerAvatarImage"
@@ -97,7 +98,7 @@
                 android:background="?attr/colorPrimary"
                 android:minHeight="?attr/actionBarSize"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                app:tabMode="scrollable" />
+                app:tabMode="fixed" />
 
         </android.support.design.widget.AppBarLayout>
 
@@ -107,10 +108,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
-
     </android.support.design.widget.CoordinatorLayout>
-
 
     <include
         layout="@layout/app_bar_navigation"
@@ -126,7 +124,6 @@
         android:layout_height="match_parent"
         android:layout_marginTop="60dp"
         android:orientation="vertical">
-
     </LinearLayout>
 
 
