--- a/app/src/main/res/layout/profile_tab_repository.xml
+++ b/app/src/main/res/layout/profile_tab_repository.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/repositoryView"
@@ -20,6 +20,18 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/repo_item" />
 
+
+    <ProgressBar
+        android:id="@+id/repoProgressBar"
+        android:layout_width="385dp"
+        android:layout_height="75dp"
+        android:layout_weight="1"
+        app:layout_constraintBottom_toBottomOf="@+id/repositoryView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/repositoryView"
+        app:layout_constraintVertical_bias="0.295" />
 
 </android.support.constraint.ConstraintLayout>
 
